# notion-torri

./: .gitignore
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: NotionToriiStack.ts
mock/: .env  Cargo.toml
mock/dynamo/: docker-compose.yml
mock/dynamo/docker/dynamodb/: shared-local-instance.db
mock/src/: api_error.rs  app_service.rs  apps_service.rs  auth.rs  backend.rs  main.rs
mock/src/repository/: apps.rs  mod.rs  repository_errors.rs
mock/src/repository/models/: app.rs
mock/src/routes/: add_app.rs  create_app.rs  delete_app.rs  get_app.rs  list_apps.rs  list_known_apps.rs  mod.rs  search_apps.rs  template.rs  update_app.rs
python/: requirements.txt
python/mock-client/: README.md  pyproject.toml
python/mock-client/mock_client/api/routes/: delete_app.py  get_app.py
python/mock-client/mock_client/models/: __init__.py  add_app_http_request_body.py
python/src/: interfaces.py  logger.py  main.py  notion.py  torii.py  torii_client.py  utils.py
python/src/mock_client/: __init__.py
python/src/mock_client/api/routes/: add_app.py  create_app.py  list_apps.py  search_apps.py  update_app.py
python/src/mock_client/models/: app.py  app_category.py  app_state.py  create_app_http_request_body.py  update_app_http_request_body.py
typescript/: .env  package-lock.json  package.json  tsconfig.json
typescript/src/: handler.ts  interfaces.ts  local.ts  main.ts  notion.ts  torii.ts  utils.ts
typescript/src/types/: schema.d.ts
