[package]
name = "mock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
async-trait = "0.1.83"
aws-config = "1.5.8"
aws-sdk-dynamodb = { version = "1.50.0", features = [
    "behavior-version-latest",
] }
axum = { version = "0.7.7", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
lambda_http = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [
    "tracing",
    "macros",
    "rt-multi-thread",
] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "serde",
    "serde_json",
    "tracing",
    "json",
    "registry",
    "time",
] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
